--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@ input[type=text], input[type=password] {
 
 button {
   background-color: #04AA6D;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
+  color: green;
+  padding: 16px 32px;
+  margin: 8px 2px;
+  border: solid;
   cursor: pointer;
   width: 100%;
+  font-size: 20px;
+  display: inline-block;                 
 }
 
 button:hover {
@@ -66,10 +68,10 @@ span.psw {
 }
 </style>
 </head>
-<body>
-
-<h2>Login Form</h2>
-
+<body style="background-colour:lightblue;">
+  <h1>Say Something</h1>
+  <p style="colour:red"><i>Example:Hello</i><p>
+     <h2>Login Form</h2>
 <form action="/action_page.php" method="post">
   <div class="container">
     <label for="uname"><b>Username</b></label>
