--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@ span.psw {
 }
 </style>
 </head>
-<body style="background-colour:lightblue;">
-  <h1>Say Something</h1>
-  <p style="colour:red"><i>Example:Hello</i><p>
+<body>
      <h2>Login Form</h2>
 <form action="/action_page.php" method="post">
   <div class="container">
