--- a/index.html
+++ b/index.html
@@ -1,95 +1,92 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<title></title>
 <style>
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1;}
-
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
+*{
+margin:0; padding:0; boxsizing:border-box;
 }
-
-button {
+header{
+width: 100%; height: 100vh;
+background-color: white;
+background-repeat: no-repeat;
+background-size: cover;
+}
+button 
+{
   background-color: #04AA6D;
-  color: green;
-  padding: 16px 32px;
-  margin: 8px 2px;
-  border: solid;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
   cursor: pointer;
   width: 100%;
-  font-size: 20px;
-  display: inline-block;                 
 }
-
-button:hover {
+button:hover 
+{
   opacity: 0.8;
 }
-
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
+nav{
+width: 100%; height: 15vh;
+background: black;
+display: flex; justify-content: space-between;
+align-items: center;
 }
-
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
+nav .mainmenu{
+width: 40%;
+display: flex; justify-content: space-around;
 }
-
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
+main{
+width: 100%; height: 85vh;
+display: flex; justify-content: center;
+align-items: center;
+text-align: center;
 }
-
-.container {
-  padding: 16px;
+section h3{
+letter-spacing: 3px; font-weight: 200;
 }
-
-span.psw {
-  float: right;
-  padding-top: 16px;
+section h1{
+text-transform: uppercase;
 }
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
-  }
-  .cancelbtn {
-     width: 100%;
-  }
+section div{
+animation:changeborder 10s infinite linear;
+}
+@keyframes changeborder{
+0%
+20%
+40%
 }
 </style>
 </head>
 <body>
-     <h2>Login Form</h2>
+<header>
+<nav>
+<div class = "logo" ><h2 style="color:white;"><i><b>TechVo Project</b><P>Mehuli Saha , Arpit Vaish, Pritish Sen</P></i></h2></div>
+</table>
+<div class = "mainmenu">
+<a href="https://pritishsen.github.io/voicetotext/">Convert your speech</a>
+<a href="">Feedback</a>
+</div>
+</nav>
+<main>
+<section>
+<h2 class = "change_text"><b><i>Convert your speech to text here</i></b><br><br></h2>
+<p><i>sign in first</i></p><br><br>
 <form action="/action_page.php" method="post">
   <div class="container">
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
-
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
           <div class="buffer col-12"></div>
     <section class="text-center col-12">
-    <hr>
+      <hr>
     <a href="https://pritishsen.github.io/voicetotext/">
     <button type="button" class="btn btn-primary btn-xl">Login</button></a>
     </section>
-    </div>
-    <label>
-      <input type="checkbox" checked="checked" name="remember"> Remember me
-    </label>
-  </div>
-
-</form>
-
+    </div>>
+</section>
+</main>
+</header>
 </body>
 </html>
