--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ animation:changeborder 10s infinite linear;
 </table>
 <div class = "mainmenu">
 <a href="https://pritishsen.github.io/voicetotext/">Convert your speech</a>
-<a href="">Feedback</a>
+<a href="https://pritishsen.github.io/kes_feedback/">Feedback</a>
 </div>
 </nav>
 <main>
